Replace jpa with jdbc in web3
Signed-off-by: sdimitrov9 <stoyan.dimitrov@limechain.tech>